--- a/frontend/src/search.css
+++ b/frontend/src/search.css
@@ -1,24 +1,12 @@
 .search-container {
-  margin: 30px 0;
+  margin: 40px 0;
 }
-  .searchbox label {
-   
-      width: 100%;
+  .searchbox {
+      width: 20%;
       position: relative;
+      margin-left: 5em;
   }
-      label:before {
-        color: midGrey;
-        content: "\f4a4";
-        font-family: Ionicons;
-        position: absolute;
-        font-weight: lighter;
-        bottom: 2px;
-        left: 0;
-        font-size: 22px;
-      
-    }
-
-    .twitter-typeahead,
+    
     .typeahead {
       width: 100%; 
       background: none;
@@ -28,11 +16,6 @@
         animation: fadein ease-in 0.5s;
         border: none;
       }
-
-      .tt-input {
-        color: white;
-      }
-
 
 .tt-dropdown-menu {
   animation: fadein ease-out 0.5s;
@@ -47,11 +30,13 @@
 }
 
 .tt-suggestion {
-  padding: 3px 20px;
-  font-size: 18px;
-  line-height: 24px;
-}
-  p {
-    margin: 5px 0; 
-  }
- 
+    padding: 3px 20px;
+    font-size: 18px;
+    line-height: 24px;
+
+    }
+    .form-control {
+        animation: fadein ease-in 0.5s;
+        border: none;
+      }
+  
