--- a/frontend/src/styles/index.css
+++ b/frontend/src/styles/index.css
@@ -5,9 +5,41 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  color: #353E6C;
+  font-family: Montserrat;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+
+#titre_film{
+/*position: absolute;*/
+width: 300px;
+height: 88px;
+left: 888px;
+top: 145px;
+font-style: italic;
+font-weight: 275;
+font-size: 72px;
+/* identical to box height */
+letter-spacing: 0.5px;
+}
+
+
+.titre_widget{
+  font-weight: bold;
+  letter-spacing: 0.5px;
+  }
+
+/*#genre_film{
+width: 660px;
+height: 84px;
+left: 720px;
+top: 242px;
+font-size: 2.25em;
+}*/
+
+
