--- a/frontend/src/styles/index.css
+++ b/frontend/src/styles/index.css
@@ -1,8 +1,9 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+  margin: auto;
+  justify-content: center;
+  /*font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
+    sans-serif; */
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   color: #353E6C;
@@ -29,6 +30,19 @@ font-size: 72px;
 letter-spacing: 0.5px;
 }
 
+#titre_film-profil{
+  /*position: absolute;*/
+  width: 300px;
+  height: 88px;
+  left: 888px;
+  top: 145px;
+  font-style: italic;
+  font-weight: 275;
+  font-size: 2.813em;
+  /* identical to box height */
+  letter-spacing: 0.5px;
+  }
+
 
 .titre_widget{
   font-weight: bold;
@@ -42,5 +56,57 @@ left: 720px;
 top: 242px;
 font-size: 2.25em;
 }*/
+
+.flex-container-row{
+  display: flex;
+  flex-direction: row;
+}
+
+.flex-container-row-wrap{
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+
+.flex-container-column{
+  display: flex;
+  flex-direction: column;
+  width: auto;
+  height: auto;
+  background-color: #FFFFFF;
+  padding: 0.5em;
+  border-radius: 30px;
+}
+
+.flex-container-column-profil{
+  display: flex;
+  flex-direction: column;
+  width: auto;
+  height: auto;
+  padding: 0.5em;
+  border-radius: 30px;
+}
+
+.information{
+  display: flex;
+  flex-wrap: wrap;
+}
+
+#gauche {
+  display: block;
+  justify-content: center;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+#dernierFilmAdd{
+  background-color: aquamarine;
+  width: 25em;
+}
+
+
+#tout{
+  background-color: #FFFFFF;
+}
 
 
