--- a/frontend/src/styles/dashboard_style.css
+++ b/frontend/src/styles/dashboard_style.css
@@ -1,4 +1,4 @@
-body{
+#bo{
   font-family: Montserrat;
   color: #353E6C;
   background: #E5E5E5;
@@ -7,26 +7,27 @@ body{
   width: 100%;
 }
 
-nav{
+#navigation{
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
-  text-decoration: underline;
+  font-family: Montserrat;
+  font-style: normal;
+  font-weight: bold;
+  font-size: large;
 }
-
 
 p{
 font-style: normal;
 font-weight: 500;
-/*font-size: 22px;*/
 }
 
 .boite{
 filter: drop-shadow(0px 15px 40px rgba(222, 222, 222, 0.1));
 border-radius: 30px;
-background-color: white;
+background-color:yellow;
 padding: 2em;
-margin: 2em;
+margin: 1em;
 justify-content: center;
 align-items: center;
 text-align: center;
@@ -43,6 +44,18 @@ text-align: center;
   #dashboard {
     flex-direction: column;
   }
+  #infosDernierFilmAdd{
+    flex-direction: column;
+  }
+  #dernierFilmAdd{
+    flex-direction: column;
+  }
+  #favoris_note{
+    flex-direction: column;
+  }
+  #favoris_note_affiche{
+    flex-direction: column;
+  }
 }
 
 #partieGauche{
@@ -50,19 +63,32 @@ text-align: center;
   flex-direction: column;
   width: 35%;
 }
-
+#partieGauche article{
+  width: 20em;
+}
 #affiches{
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
 }
+#barreRecherche{
+  background: #F4F5F7;
+border-radius: 30px;
+border: none;
+height: 3em;
+margin-bottom: 1em;
+}
 
-#mesFavoris img{
+#mesFavoris .poster{
   height: 15em;
+}
+#mesFavoris button{
+  background-color: white;
+  border:none;
 }
 
 #notesParGenre img{
-  width: 20em;
+  width: 15em;
 }
 
 #dernierFilmAdd{
@@ -83,12 +109,9 @@ align-items: center;
   flex-direction: row;
 }
 
-
-
-
 #infosFilm{
 /*font-size: 22px;*/
-width: 30%;
+width: 60%;
 }
 
 #infosFilm h1{
@@ -136,5 +159,5 @@ font-weight: bold;
 }
 
 #affiche img{
-  width: 20em;
+  width: 25em;
 }
