--- a/frontend/src/styles/mon_profil_style.css
+++ b/frontend/src/styles/mon_profil_style.css
@@ -1,9 +1,10 @@
-.bod{
+.body{
     font-family: Montserrat;
     color: #353E6C;
     background: #E5E5E5;
     display: flex;
     flex-direction: column;
+    justify-content: center;
   }
   
   nav{
@@ -30,6 +31,7 @@
   background-color: white;
   padding: 2em;
   margin: 2em;
+  width: 20%;
   justify-content: center;
   align-items: center;
   text-align: center;
@@ -49,10 +51,6 @@
     padding: 2em;
   }
 
-  .affiche img{
-      height: 10em;
-  }
-
   .favoris_supprimer_sauvegarder{
       display: block;
       justify-content: space-evenly;
@@ -67,6 +65,25 @@
       display: flex;
       flex-direction: row;
       justify-content: space-between;
+  }
+  .boutonCrud{
+    background: #F4F5F7;
+      border: none;
+  }
+  .boutonupdate{
+    background: white;
+    border: none;
+  }
+
+  main{
+    display: flex;
+    direction: row;
+    justify-content: space-evenly;
+  }
+  @media (max-width: 800px) {
+    main {
+      flex-direction: column;
+    }
   }
   
   
